--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,73 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 body{
-    height:90vh;
+    height:100vh;
+    background-image: url(https://bartlam.me/Resources/Images/MtgTile.png);
+}
+
+p {
+    font: 22px Montserrat, Sans-Serif;
+    color: white;
+    font-weight: bold;
+    text-shadow: 1px 1px black;
+}
+
+input[type=text] {
+    border: none;
+    border-radius: 5px;
+    width: calc(100% - 10px);
+    padding: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+button {
+    border: none;
+    border-radius: 5px;
+    background-color: white;
+    width: 100%;
+    padding: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.cardImage {
+    height: 816px;
+    width: 584px;
+    filter: blur(10px);
+    border-radius: 27px;
+    transform: translateY(55px);
+}
+
+.cardImageClear {
+    height: 816px;
+    width: 584px;
+    border-radius: 27px;
+    transform: translateY(55px);
+    animation-name: cardClear;
+    animation-duration: 2s;
+}
+
+.contBox {
+    transform: translateY(calc(-50% - 408px));
+    width: 250px;
+    text-align: center;
+}
+
+.contBoxMove {
+    transform: translate(calc(-50% - 300px), calc(-50% - 408px));
+    width: 250px;
+    text-align: center;
+    animation-name: moveLeft;
+    animation-duration: 2s;
+}
+
+@keyframes moveLeft {
+    from {transform: translate(0, calc(-50% - 408px));}
+    to {transform: translate(calc(-50% - 300px), calc(-50% - 408px));}
+}
+
+@keyframes cardClear {
+    from {filter: blur(10px);}
+    to {filter: blur(0px);}
 }
